# rorqual

./: Cargo.toml  README.md  default.nix  edit-fixtures.sh
src/: git2graph.rs  git_graph.rs  main.rs
src/analyser/: centrality.rs  mod.rs
tests/fixtures/basic-repo/.gitted/: COMMIT_EDITMSG  index
tests/fixtures/basic-repo/.gitted/hooks/: applypatch-msg.sample  commit-msg.sample  fsmonitor-watchman.sample  post-update.sample  pre-applypatch.sample  pre-commit.sample  pre-merge-commit.sample  pre-push.sample  pre-rebase.sample  pre-receive.sample  prepare-commit-msg.sample  update.sample
tests/fixtures/basic-repo/.gitted/logs/refs/heads/: master
tests/fixtures/basic-repo/.gitted/refs/heads/: master
