[package]
name = "rorqual"
version = "0.1.0"
authors = ["Christian Rades <c.rades@shopware.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
git2 = "0.13.23"
petgraph = "0.6.0"
rayon = "1.5.1"
chrono = "0.4.19"
chrono-tz = "0.6.0"
num-traits = "0.2.8"
ordered-float = "2.8.0"
petgraph-graphml = "1.0.2"
tempfile = "3"
walkdir = "2.3"
